tomljson/parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT
    EQUAL
    NEWLINE
    SPACE

Grammar

Rule 0     S' -> document
Rule 1     document -> toml
Rule 2     document -> toml document
Rule 3     toml -> content
Rule 4     toml -> array
Rule 5     toml -> table
Rule 6     toml -> inline_table
Rule 7     toml -> array_tables
Rule 8     array_tables -> ARRAY_TABLES_HEADER content
Rule 9     array_tables -> ARRAY_TABLES_HEADER array_tables
Rule 10    child -> CHILD_HEADER content
Rule 11    inline_table -> LCURLY contents RCURLY
Rule 12    inline_table -> LCURLY RCURLY
Rule 13    table -> TABLE_HEADER content
Rule 14    table -> TABLE_HEADER child
Rule 15    contents -> contents COMMA content
Rule 16    contents -> content
Rule 17    content -> assignment
Rule 18    content -> content assignment
Rule 19    assignment -> VARIABLE value
Rule 20    assignment -> VARIABLE array
Rule 21    assignment -> VARIABLE inline_table
Rule 22    array -> DOT LBRACKET array RBRACKET
Rule 23    array -> DOT LBRACKET values RBRACKET
Rule 24    array -> DOT LBRACKET RBRACKET
Rule 25    values -> value COMMA values
Rule 26    values -> value
Rule 27    value -> STRING
Rule 28    value -> INTEGER
Rule 29    value -> FLOAT
Rule 30    value -> BOOLEAN
Rule 31    value -> DATE

Terminals, with rules where they appear

ARRAY_TABLES_HEADER  : 8 9
BOOLEAN              : 30
CHILD_HEADER         : 10
COMMA                : 15 25
COMMENT              : 
DATE                 : 31
DOT                  : 22 23 24
EQUAL                : 
FLOAT                : 29
INTEGER              : 28
LBRACKET             : 22 23 24
LCURLY               : 11 12
NEWLINE              : 
RBRACKET             : 22 23 24
RCURLY               : 11 12
SPACE                : 
STRING               : 27
TABLE_HEADER         : 13 14
VARIABLE             : 19 20 21
error                : 

Nonterminals, with rules where they appear

array                : 4 20 22
array_tables         : 7 9
assignment           : 17 18
child                : 14
content              : 3 8 10 13 15 16 18
contents             : 11 15
document             : 2 0
inline_table         : 6 21
table                : 5
toml                 : 1 2
value                : 19 25 26
values               : 23 25

Parsing method: LALR

state 0

    (0) S' -> . document
    (1) document -> . toml
    (2) document -> . toml document
    (3) toml -> . content
    (4) toml -> . array
    (5) toml -> . table
    (6) toml -> . inline_table
    (7) toml -> . array_tables
    (17) content -> . assignment
    (18) content -> . content assignment
    (22) array -> . DOT LBRACKET array RBRACKET
    (23) array -> . DOT LBRACKET values RBRACKET
    (24) array -> . DOT LBRACKET RBRACKET
    (13) table -> . TABLE_HEADER content
    (14) table -> . TABLE_HEADER child
    (11) inline_table -> . LCURLY contents RCURLY
    (12) inline_table -> . LCURLY RCURLY
    (8) array_tables -> . ARRAY_TABLES_HEADER content
    (9) array_tables -> . ARRAY_TABLES_HEADER array_tables
    (19) assignment -> . VARIABLE value
    (20) assignment -> . VARIABLE array
    (21) assignment -> . VARIABLE inline_table

    DOT             shift and go to state 9
    TABLE_HEADER    shift and go to state 10
    LCURLY          shift and go to state 11
    ARRAY_TABLES_HEADER shift and go to state 12
    VARIABLE        shift and go to state 13

    document                       shift and go to state 1
    toml                           shift and go to state 2
    content                        shift and go to state 3
    array                          shift and go to state 4
    table                          shift and go to state 5
    inline_table                   shift and go to state 6
    array_tables                   shift and go to state 7
    assignment                     shift and go to state 8

state 1

    (0) S' -> document .



state 2

    (1) document -> toml .
    (2) document -> toml . document
    (1) document -> . toml
    (2) document -> . toml document
    (3) toml -> . content
    (4) toml -> . array
    (5) toml -> . table
    (6) toml -> . inline_table
    (7) toml -> . array_tables
    (17) content -> . assignment
    (18) content -> . content assignment
    (22) array -> . DOT LBRACKET array RBRACKET
    (23) array -> . DOT LBRACKET values RBRACKET
    (24) array -> . DOT LBRACKET RBRACKET
    (13) table -> . TABLE_HEADER content
    (14) table -> . TABLE_HEADER child
    (11) inline_table -> . LCURLY contents RCURLY
    (12) inline_table -> . LCURLY RCURLY
    (8) array_tables -> . ARRAY_TABLES_HEADER content
    (9) array_tables -> . ARRAY_TABLES_HEADER array_tables
    (19) assignment -> . VARIABLE value
    (20) assignment -> . VARIABLE array
    (21) assignment -> . VARIABLE inline_table

    $end            reduce using rule 1 (document -> toml .)
    DOT             shift and go to state 9
    TABLE_HEADER    shift and go to state 10
    LCURLY          shift and go to state 11
    ARRAY_TABLES_HEADER shift and go to state 12
    VARIABLE        shift and go to state 13

    toml                           shift and go to state 2
    document                       shift and go to state 14
    content                        shift and go to state 3
    array                          shift and go to state 4
    table                          shift and go to state 5
    inline_table                   shift and go to state 6
    array_tables                   shift and go to state 7
    assignment                     shift and go to state 8

state 3

    (3) toml -> content .
    (18) content -> content . assignment
    (19) assignment -> . VARIABLE value
    (20) assignment -> . VARIABLE array
    (21) assignment -> . VARIABLE inline_table

  ! shift/reduce conflict for VARIABLE resolved as shift
    DOT             reduce using rule 3 (toml -> content .)
    TABLE_HEADER    reduce using rule 3 (toml -> content .)
    LCURLY          reduce using rule 3 (toml -> content .)
    ARRAY_TABLES_HEADER reduce using rule 3 (toml -> content .)
    $end            reduce using rule 3 (toml -> content .)
    VARIABLE        shift and go to state 13

  ! VARIABLE        [ reduce using rule 3 (toml -> content .) ]

    assignment                     shift and go to state 15

state 4

    (4) toml -> array .

    DOT             reduce using rule 4 (toml -> array .)
    TABLE_HEADER    reduce using rule 4 (toml -> array .)
    LCURLY          reduce using rule 4 (toml -> array .)
    ARRAY_TABLES_HEADER reduce using rule 4 (toml -> array .)
    VARIABLE        reduce using rule 4 (toml -> array .)
    $end            reduce using rule 4 (toml -> array .)


state 5

    (5) toml -> table .

    DOT             reduce using rule 5 (toml -> table .)
    TABLE_HEADER    reduce using rule 5 (toml -> table .)
    LCURLY          reduce using rule 5 (toml -> table .)
    ARRAY_TABLES_HEADER reduce using rule 5 (toml -> table .)
    VARIABLE        reduce using rule 5 (toml -> table .)
    $end            reduce using rule 5 (toml -> table .)


state 6

    (6) toml -> inline_table .

    DOT             reduce using rule 6 (toml -> inline_table .)
    TABLE_HEADER    reduce using rule 6 (toml -> inline_table .)
    LCURLY          reduce using rule 6 (toml -> inline_table .)
    ARRAY_TABLES_HEADER reduce using rule 6 (toml -> inline_table .)
    VARIABLE        reduce using rule 6 (toml -> inline_table .)
    $end            reduce using rule 6 (toml -> inline_table .)


state 7

    (7) toml -> array_tables .

    DOT             reduce using rule 7 (toml -> array_tables .)
    TABLE_HEADER    reduce using rule 7 (toml -> array_tables .)
    LCURLY          reduce using rule 7 (toml -> array_tables .)
    ARRAY_TABLES_HEADER reduce using rule 7 (toml -> array_tables .)
    VARIABLE        reduce using rule 7 (toml -> array_tables .)
    $end            reduce using rule 7 (toml -> array_tables .)


state 8

    (17) content -> assignment .

    VARIABLE        reduce using rule 17 (content -> assignment .)
    DOT             reduce using rule 17 (content -> assignment .)
    TABLE_HEADER    reduce using rule 17 (content -> assignment .)
    LCURLY          reduce using rule 17 (content -> assignment .)
    ARRAY_TABLES_HEADER reduce using rule 17 (content -> assignment .)
    $end            reduce using rule 17 (content -> assignment .)
    RCURLY          reduce using rule 17 (content -> assignment .)
    COMMA           reduce using rule 17 (content -> assignment .)


state 9

    (22) array -> DOT . LBRACKET array RBRACKET
    (23) array -> DOT . LBRACKET values RBRACKET
    (24) array -> DOT . LBRACKET RBRACKET

    LBRACKET        shift and go to state 16


state 10

    (13) table -> TABLE_HEADER . content
    (14) table -> TABLE_HEADER . child
    (17) content -> . assignment
    (18) content -> . content assignment
    (10) child -> . CHILD_HEADER content
    (19) assignment -> . VARIABLE value
    (20) assignment -> . VARIABLE array
    (21) assignment -> . VARIABLE inline_table

    CHILD_HEADER    shift and go to state 19
    VARIABLE        shift and go to state 13

    content                        shift and go to state 17
    child                          shift and go to state 18
    assignment                     shift and go to state 8

state 11

    (11) inline_table -> LCURLY . contents RCURLY
    (12) inline_table -> LCURLY . RCURLY
    (15) contents -> . contents COMMA content
    (16) contents -> . content
    (17) content -> . assignment
    (18) content -> . content assignment
    (19) assignment -> . VARIABLE value
    (20) assignment -> . VARIABLE array
    (21) assignment -> . VARIABLE inline_table

    RCURLY          shift and go to state 21
    VARIABLE        shift and go to state 13

    contents                       shift and go to state 20
    content                        shift and go to state 22
    assignment                     shift and go to state 8

state 12

    (8) array_tables -> ARRAY_TABLES_HEADER . content
    (9) array_tables -> ARRAY_TABLES_HEADER . array_tables
    (17) content -> . assignment
    (18) content -> . content assignment
    (8) array_tables -> . ARRAY_TABLES_HEADER content
    (9) array_tables -> . ARRAY_TABLES_HEADER array_tables
    (19) assignment -> . VARIABLE value
    (20) assignment -> . VARIABLE array
    (21) assignment -> . VARIABLE inline_table

    ARRAY_TABLES_HEADER shift and go to state 12
    VARIABLE        shift and go to state 13

    content                        shift and go to state 23
    array_tables                   shift and go to state 24
    assignment                     shift and go to state 8

state 13

    (19) assignment -> VARIABLE . value
    (20) assignment -> VARIABLE . array
    (21) assignment -> VARIABLE . inline_table
    (27) value -> . STRING
    (28) value -> . INTEGER
    (29) value -> . FLOAT
    (30) value -> . BOOLEAN
    (31) value -> . DATE
    (22) array -> . DOT LBRACKET array RBRACKET
    (23) array -> . DOT LBRACKET values RBRACKET
    (24) array -> . DOT LBRACKET RBRACKET
    (11) inline_table -> . LCURLY contents RCURLY
    (12) inline_table -> . LCURLY RCURLY

    STRING          shift and go to state 28
    INTEGER         shift and go to state 29
    FLOAT           shift and go to state 30
    BOOLEAN         shift and go to state 31
    DATE            shift and go to state 32
    DOT             shift and go to state 9
    LCURLY          shift and go to state 11

    value                          shift and go to state 25
    array                          shift and go to state 26
    inline_table                   shift and go to state 27

state 14

    (2) document -> toml document .

    $end            reduce using rule 2 (document -> toml document .)


state 15

    (18) content -> content assignment .

    VARIABLE        reduce using rule 18 (content -> content assignment .)
    DOT             reduce using rule 18 (content -> content assignment .)
    TABLE_HEADER    reduce using rule 18 (content -> content assignment .)
    LCURLY          reduce using rule 18 (content -> content assignment .)
    ARRAY_TABLES_HEADER reduce using rule 18 (content -> content assignment .)
    $end            reduce using rule 18 (content -> content assignment .)
    RCURLY          reduce using rule 18 (content -> content assignment .)
    COMMA           reduce using rule 18 (content -> content assignment .)


state 16

    (22) array -> DOT LBRACKET . array RBRACKET
    (23) array -> DOT LBRACKET . values RBRACKET
    (24) array -> DOT LBRACKET . RBRACKET
    (22) array -> . DOT LBRACKET array RBRACKET
    (23) array -> . DOT LBRACKET values RBRACKET
    (24) array -> . DOT LBRACKET RBRACKET
    (25) values -> . value COMMA values
    (26) values -> . value
    (27) value -> . STRING
    (28) value -> . INTEGER
    (29) value -> . FLOAT
    (30) value -> . BOOLEAN
    (31) value -> . DATE

    RBRACKET        shift and go to state 34
    DOT             shift and go to state 9
    STRING          shift and go to state 28
    INTEGER         shift and go to state 29
    FLOAT           shift and go to state 30
    BOOLEAN         shift and go to state 31
    DATE            shift and go to state 32

    array                          shift and go to state 33
    values                         shift and go to state 35
    value                          shift and go to state 36

state 17

    (13) table -> TABLE_HEADER content .
    (18) content -> content . assignment
    (19) assignment -> . VARIABLE value
    (20) assignment -> . VARIABLE array
    (21) assignment -> . VARIABLE inline_table

  ! shift/reduce conflict for VARIABLE resolved as shift
    DOT             reduce using rule 13 (table -> TABLE_HEADER content .)
    TABLE_HEADER    reduce using rule 13 (table -> TABLE_HEADER content .)
    LCURLY          reduce using rule 13 (table -> TABLE_HEADER content .)
    ARRAY_TABLES_HEADER reduce using rule 13 (table -> TABLE_HEADER content .)
    $end            reduce using rule 13 (table -> TABLE_HEADER content .)
    VARIABLE        shift and go to state 13

  ! VARIABLE        [ reduce using rule 13 (table -> TABLE_HEADER content .) ]

    assignment                     shift and go to state 15

state 18

    (14) table -> TABLE_HEADER child .

    DOT             reduce using rule 14 (table -> TABLE_HEADER child .)
    TABLE_HEADER    reduce using rule 14 (table -> TABLE_HEADER child .)
    LCURLY          reduce using rule 14 (table -> TABLE_HEADER child .)
    ARRAY_TABLES_HEADER reduce using rule 14 (table -> TABLE_HEADER child .)
    VARIABLE        reduce using rule 14 (table -> TABLE_HEADER child .)
    $end            reduce using rule 14 (table -> TABLE_HEADER child .)


state 19

    (10) child -> CHILD_HEADER . content
    (17) content -> . assignment
    (18) content -> . content assignment
    (19) assignment -> . VARIABLE value
    (20) assignment -> . VARIABLE array
    (21) assignment -> . VARIABLE inline_table

    VARIABLE        shift and go to state 13

    content                        shift and go to state 37
    assignment                     shift and go to state 8

state 20

    (11) inline_table -> LCURLY contents . RCURLY
    (15) contents -> contents . COMMA content

    RCURLY          shift and go to state 38
    COMMA           shift and go to state 39


state 21

    (12) inline_table -> LCURLY RCURLY .

    DOT             reduce using rule 12 (inline_table -> LCURLY RCURLY .)
    TABLE_HEADER    reduce using rule 12 (inline_table -> LCURLY RCURLY .)
    LCURLY          reduce using rule 12 (inline_table -> LCURLY RCURLY .)
    ARRAY_TABLES_HEADER reduce using rule 12 (inline_table -> LCURLY RCURLY .)
    VARIABLE        reduce using rule 12 (inline_table -> LCURLY RCURLY .)
    $end            reduce using rule 12 (inline_table -> LCURLY RCURLY .)
    RCURLY          reduce using rule 12 (inline_table -> LCURLY RCURLY .)
    COMMA           reduce using rule 12 (inline_table -> LCURLY RCURLY .)


state 22

    (16) contents -> content .
    (18) content -> content . assignment
    (19) assignment -> . VARIABLE value
    (20) assignment -> . VARIABLE array
    (21) assignment -> . VARIABLE inline_table

    RCURLY          reduce using rule 16 (contents -> content .)
    COMMA           reduce using rule 16 (contents -> content .)
    VARIABLE        shift and go to state 13

    assignment                     shift and go to state 15

state 23

    (8) array_tables -> ARRAY_TABLES_HEADER content .
    (18) content -> content . assignment
    (19) assignment -> . VARIABLE value
    (20) assignment -> . VARIABLE array
    (21) assignment -> . VARIABLE inline_table

  ! shift/reduce conflict for VARIABLE resolved as shift
    DOT             reduce using rule 8 (array_tables -> ARRAY_TABLES_HEADER content .)
    TABLE_HEADER    reduce using rule 8 (array_tables -> ARRAY_TABLES_HEADER content .)
    LCURLY          reduce using rule 8 (array_tables -> ARRAY_TABLES_HEADER content .)
    ARRAY_TABLES_HEADER reduce using rule 8 (array_tables -> ARRAY_TABLES_HEADER content .)
    $end            reduce using rule 8 (array_tables -> ARRAY_TABLES_HEADER content .)
    VARIABLE        shift and go to state 13

  ! VARIABLE        [ reduce using rule 8 (array_tables -> ARRAY_TABLES_HEADER content .) ]

    assignment                     shift and go to state 15

state 24

    (9) array_tables -> ARRAY_TABLES_HEADER array_tables .

    DOT             reduce using rule 9 (array_tables -> ARRAY_TABLES_HEADER array_tables .)
    TABLE_HEADER    reduce using rule 9 (array_tables -> ARRAY_TABLES_HEADER array_tables .)
    LCURLY          reduce using rule 9 (array_tables -> ARRAY_TABLES_HEADER array_tables .)
    ARRAY_TABLES_HEADER reduce using rule 9 (array_tables -> ARRAY_TABLES_HEADER array_tables .)
    VARIABLE        reduce using rule 9 (array_tables -> ARRAY_TABLES_HEADER array_tables .)
    $end            reduce using rule 9 (array_tables -> ARRAY_TABLES_HEADER array_tables .)


state 25

    (19) assignment -> VARIABLE value .

    VARIABLE        reduce using rule 19 (assignment -> VARIABLE value .)
    DOT             reduce using rule 19 (assignment -> VARIABLE value .)
    TABLE_HEADER    reduce using rule 19 (assignment -> VARIABLE value .)
    LCURLY          reduce using rule 19 (assignment -> VARIABLE value .)
    ARRAY_TABLES_HEADER reduce using rule 19 (assignment -> VARIABLE value .)
    $end            reduce using rule 19 (assignment -> VARIABLE value .)
    RCURLY          reduce using rule 19 (assignment -> VARIABLE value .)
    COMMA           reduce using rule 19 (assignment -> VARIABLE value .)


state 26

    (20) assignment -> VARIABLE array .

    VARIABLE        reduce using rule 20 (assignment -> VARIABLE array .)
    DOT             reduce using rule 20 (assignment -> VARIABLE array .)
    TABLE_HEADER    reduce using rule 20 (assignment -> VARIABLE array .)
    LCURLY          reduce using rule 20 (assignment -> VARIABLE array .)
    ARRAY_TABLES_HEADER reduce using rule 20 (assignment -> VARIABLE array .)
    $end            reduce using rule 20 (assignment -> VARIABLE array .)
    RCURLY          reduce using rule 20 (assignment -> VARIABLE array .)
    COMMA           reduce using rule 20 (assignment -> VARIABLE array .)


state 27

    (21) assignment -> VARIABLE inline_table .

    VARIABLE        reduce using rule 21 (assignment -> VARIABLE inline_table .)
    DOT             reduce using rule 21 (assignment -> VARIABLE inline_table .)
    TABLE_HEADER    reduce using rule 21 (assignment -> VARIABLE inline_table .)
    LCURLY          reduce using rule 21 (assignment -> VARIABLE inline_table .)
    ARRAY_TABLES_HEADER reduce using rule 21 (assignment -> VARIABLE inline_table .)
    $end            reduce using rule 21 (assignment -> VARIABLE inline_table .)
    RCURLY          reduce using rule 21 (assignment -> VARIABLE inline_table .)
    COMMA           reduce using rule 21 (assignment -> VARIABLE inline_table .)


state 28

    (27) value -> STRING .

    VARIABLE        reduce using rule 27 (value -> STRING .)
    DOT             reduce using rule 27 (value -> STRING .)
    TABLE_HEADER    reduce using rule 27 (value -> STRING .)
    LCURLY          reduce using rule 27 (value -> STRING .)
    ARRAY_TABLES_HEADER reduce using rule 27 (value -> STRING .)
    $end            reduce using rule 27 (value -> STRING .)
    RCURLY          reduce using rule 27 (value -> STRING .)
    COMMA           reduce using rule 27 (value -> STRING .)
    RBRACKET        reduce using rule 27 (value -> STRING .)


state 29

    (28) value -> INTEGER .

    VARIABLE        reduce using rule 28 (value -> INTEGER .)
    DOT             reduce using rule 28 (value -> INTEGER .)
    TABLE_HEADER    reduce using rule 28 (value -> INTEGER .)
    LCURLY          reduce using rule 28 (value -> INTEGER .)
    ARRAY_TABLES_HEADER reduce using rule 28 (value -> INTEGER .)
    $end            reduce using rule 28 (value -> INTEGER .)
    RCURLY          reduce using rule 28 (value -> INTEGER .)
    COMMA           reduce using rule 28 (value -> INTEGER .)
    RBRACKET        reduce using rule 28 (value -> INTEGER .)


state 30

    (29) value -> FLOAT .

    VARIABLE        reduce using rule 29 (value -> FLOAT .)
    DOT             reduce using rule 29 (value -> FLOAT .)
    TABLE_HEADER    reduce using rule 29 (value -> FLOAT .)
    LCURLY          reduce using rule 29 (value -> FLOAT .)
    ARRAY_TABLES_HEADER reduce using rule 29 (value -> FLOAT .)
    $end            reduce using rule 29 (value -> FLOAT .)
    RCURLY          reduce using rule 29 (value -> FLOAT .)
    COMMA           reduce using rule 29 (value -> FLOAT .)
    RBRACKET        reduce using rule 29 (value -> FLOAT .)


state 31

    (30) value -> BOOLEAN .

    VARIABLE        reduce using rule 30 (value -> BOOLEAN .)
    DOT             reduce using rule 30 (value -> BOOLEAN .)
    TABLE_HEADER    reduce using rule 30 (value -> BOOLEAN .)
    LCURLY          reduce using rule 30 (value -> BOOLEAN .)
    ARRAY_TABLES_HEADER reduce using rule 30 (value -> BOOLEAN .)
    $end            reduce using rule 30 (value -> BOOLEAN .)
    RCURLY          reduce using rule 30 (value -> BOOLEAN .)
    COMMA           reduce using rule 30 (value -> BOOLEAN .)
    RBRACKET        reduce using rule 30 (value -> BOOLEAN .)


state 32

    (31) value -> DATE .

    VARIABLE        reduce using rule 31 (value -> DATE .)
    DOT             reduce using rule 31 (value -> DATE .)
    TABLE_HEADER    reduce using rule 31 (value -> DATE .)
    LCURLY          reduce using rule 31 (value -> DATE .)
    ARRAY_TABLES_HEADER reduce using rule 31 (value -> DATE .)
    $end            reduce using rule 31 (value -> DATE .)
    RCURLY          reduce using rule 31 (value -> DATE .)
    COMMA           reduce using rule 31 (value -> DATE .)
    RBRACKET        reduce using rule 31 (value -> DATE .)


state 33

    (22) array -> DOT LBRACKET array . RBRACKET

    RBRACKET        shift and go to state 40


state 34

    (24) array -> DOT LBRACKET RBRACKET .

    DOT             reduce using rule 24 (array -> DOT LBRACKET RBRACKET .)
    TABLE_HEADER    reduce using rule 24 (array -> DOT LBRACKET RBRACKET .)
    LCURLY          reduce using rule 24 (array -> DOT LBRACKET RBRACKET .)
    ARRAY_TABLES_HEADER reduce using rule 24 (array -> DOT LBRACKET RBRACKET .)
    VARIABLE        reduce using rule 24 (array -> DOT LBRACKET RBRACKET .)
    $end            reduce using rule 24 (array -> DOT LBRACKET RBRACKET .)
    RCURLY          reduce using rule 24 (array -> DOT LBRACKET RBRACKET .)
    COMMA           reduce using rule 24 (array -> DOT LBRACKET RBRACKET .)
    RBRACKET        reduce using rule 24 (array -> DOT LBRACKET RBRACKET .)


state 35

    (23) array -> DOT LBRACKET values . RBRACKET

    RBRACKET        shift and go to state 41


state 36

    (25) values -> value . COMMA values
    (26) values -> value .

    COMMA           shift and go to state 42
    RBRACKET        reduce using rule 26 (values -> value .)


state 37

    (10) child -> CHILD_HEADER content .
    (18) content -> content . assignment
    (19) assignment -> . VARIABLE value
    (20) assignment -> . VARIABLE array
    (21) assignment -> . VARIABLE inline_table

  ! shift/reduce conflict for VARIABLE resolved as shift
    DOT             reduce using rule 10 (child -> CHILD_HEADER content .)
    TABLE_HEADER    reduce using rule 10 (child -> CHILD_HEADER content .)
    LCURLY          reduce using rule 10 (child -> CHILD_HEADER content .)
    ARRAY_TABLES_HEADER reduce using rule 10 (child -> CHILD_HEADER content .)
    $end            reduce using rule 10 (child -> CHILD_HEADER content .)
    VARIABLE        shift and go to state 13

  ! VARIABLE        [ reduce using rule 10 (child -> CHILD_HEADER content .) ]

    assignment                     shift and go to state 15

state 38

    (11) inline_table -> LCURLY contents RCURLY .

    DOT             reduce using rule 11 (inline_table -> LCURLY contents RCURLY .)
    TABLE_HEADER    reduce using rule 11 (inline_table -> LCURLY contents RCURLY .)
    LCURLY          reduce using rule 11 (inline_table -> LCURLY contents RCURLY .)
    ARRAY_TABLES_HEADER reduce using rule 11 (inline_table -> LCURLY contents RCURLY .)
    VARIABLE        reduce using rule 11 (inline_table -> LCURLY contents RCURLY .)
    $end            reduce using rule 11 (inline_table -> LCURLY contents RCURLY .)
    RCURLY          reduce using rule 11 (inline_table -> LCURLY contents RCURLY .)
    COMMA           reduce using rule 11 (inline_table -> LCURLY contents RCURLY .)


state 39

    (15) contents -> contents COMMA . content
    (17) content -> . assignment
    (18) content -> . content assignment
    (19) assignment -> . VARIABLE value
    (20) assignment -> . VARIABLE array
    (21) assignment -> . VARIABLE inline_table

    VARIABLE        shift and go to state 13

    content                        shift and go to state 43
    assignment                     shift and go to state 8

state 40

    (22) array -> DOT LBRACKET array RBRACKET .

    DOT             reduce using rule 22 (array -> DOT LBRACKET array RBRACKET .)
    TABLE_HEADER    reduce using rule 22 (array -> DOT LBRACKET array RBRACKET .)
    LCURLY          reduce using rule 22 (array -> DOT LBRACKET array RBRACKET .)
    ARRAY_TABLES_HEADER reduce using rule 22 (array -> DOT LBRACKET array RBRACKET .)
    VARIABLE        reduce using rule 22 (array -> DOT LBRACKET array RBRACKET .)
    $end            reduce using rule 22 (array -> DOT LBRACKET array RBRACKET .)
    RCURLY          reduce using rule 22 (array -> DOT LBRACKET array RBRACKET .)
    COMMA           reduce using rule 22 (array -> DOT LBRACKET array RBRACKET .)
    RBRACKET        reduce using rule 22 (array -> DOT LBRACKET array RBRACKET .)


state 41

    (23) array -> DOT LBRACKET values RBRACKET .

    DOT             reduce using rule 23 (array -> DOT LBRACKET values RBRACKET .)
    TABLE_HEADER    reduce using rule 23 (array -> DOT LBRACKET values RBRACKET .)
    LCURLY          reduce using rule 23 (array -> DOT LBRACKET values RBRACKET .)
    ARRAY_TABLES_HEADER reduce using rule 23 (array -> DOT LBRACKET values RBRACKET .)
    VARIABLE        reduce using rule 23 (array -> DOT LBRACKET values RBRACKET .)
    $end            reduce using rule 23 (array -> DOT LBRACKET values RBRACKET .)
    RCURLY          reduce using rule 23 (array -> DOT LBRACKET values RBRACKET .)
    COMMA           reduce using rule 23 (array -> DOT LBRACKET values RBRACKET .)
    RBRACKET        reduce using rule 23 (array -> DOT LBRACKET values RBRACKET .)


state 42

    (25) values -> value COMMA . values
    (25) values -> . value COMMA values
    (26) values -> . value
    (27) value -> . STRING
    (28) value -> . INTEGER
    (29) value -> . FLOAT
    (30) value -> . BOOLEAN
    (31) value -> . DATE

    STRING          shift and go to state 28
    INTEGER         shift and go to state 29
    FLOAT           shift and go to state 30
    BOOLEAN         shift and go to state 31
    DATE            shift and go to state 32

    value                          shift and go to state 36
    values                         shift and go to state 44

state 43

    (15) contents -> contents COMMA content .
    (18) content -> content . assignment
    (19) assignment -> . VARIABLE value
    (20) assignment -> . VARIABLE array
    (21) assignment -> . VARIABLE inline_table

    RCURLY          reduce using rule 15 (contents -> contents COMMA content .)
    COMMA           reduce using rule 15 (contents -> contents COMMA content .)
    VARIABLE        shift and go to state 13

    assignment                     shift and go to state 15

state 44

    (25) values -> value COMMA values .

    RBRACKET        reduce using rule 25 (values -> value COMMA values .)

WARNING: 
WARNING: Conflicts:
WARNING: 
WARNING: shift/reduce conflict for VARIABLE in state 3 resolved as shift
WARNING: shift/reduce conflict for VARIABLE in state 17 resolved as shift
WARNING: shift/reduce conflict for VARIABLE in state 23 resolved as shift
WARNING: shift/reduce conflict for VARIABLE in state 37 resolved as shift
